refactor mocks, response, remove type from endpoint
