# auth/openapi.yml
@@ -225,7 +225,7 @@ paths:
           description: Group does not exist.
         '500':
           $ref: "#/components/responses/ServiceError"
-  /groups/{groupId}/{type}:
+  /groups/{groupId}/members:
     post:
       summary: Assigns members to a group.
       description: |
@@ -235,7 +235,6 @@ paths:
       parameters:
         - $ref: "#/components/parameters/Authorization"
         - $ref: "#/components/parameters/GroupId"
-        - $ref: "#/components/parameters/MemberType"
       requestBody:
         $ref: "#/components/requestBodies/MembersReq"
       responses:
@@ -251,7 +250,6 @@ paths:
           description: Missing or invalid content type.
         '500':
           $ref: "#/components/responses/ServiceError"
-  /groups/{groupId}/members:
     get:
       summary: Gets members of a group.
       description: |
@@ -387,6 +385,9 @@ components:
           items:
             type: string
             format: uuid | ulid
+        type:
+          type: string
+          description: Type of entity
     GroupsPage:
       type: object
       properties:
